<resources>
    <string name="app_name">Ahorromatic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gastos">Gastos</string>
    <string name="menu_ingresos">Ingresos</string>
    <string name="menu_usuario">Usuarios</string>
    <string name="menu_historial">Historial</string>
    <string name="menu_historial_ingresos">Historial Ingresos</string>
    <string name="menu_historial_gastos">Historial Gastos</string>
    <string name="menu_nuevo_ingreso">Registrar Ingreso</string>
    <string name="menu_nuevo_gasto">Registrar Gasto</string>

    <string name="button_gastos">Gastos</string>
    <string name="button_ingresos">Ingresos</string>

    <!--Nav-->
    <string name="nav_inicio">Inicio</string>

    <!--Home-->
    <string name="inicio_bienvenido">Bienvenido</string>
    <string name="inicio_registrar_ingreso">Registrar Ingreso</string>
    <string name="inicio_registrar_gastos">Registrar Gasto</string>
    <string name="inicio_cuentas">Cuentas</string>
    <string name="inicio_usuarios">Usuarios</string>

    <!--Ingresos Layout-->
    <string name="ingresos_monto">Ingresar Monto</string>
    <string name="ingresos_categoria">Categoria</string>
    <string name="ingresos_detalles">Detalles</string>
    <string name="ingresos_dia">Ingresar Dia</string>
    <string name="ingresos_mes">Seleccionar Mes</string>
    <string name="ingresos_anio">Seleccionar Año</string>
    <string name="ingresos_ingresar_registro">Ingresar Registro</string>

    <!--Gastos Layout-->
    <string name="gastos_monto">Ingresar Monto</string>
    <string name="gastos_categoria">Categoria</string>
    <string name="gastos_detalles">Detalles</string>
    <string name="gastos_dia">Ingresar Dia</string>
    <string name="gastos_mes">Seleccionar Mes</string>
    <string name="gastos_anio">Seleccionar Año</string>
    <string name="gastos_ingresar_registro">Ingresar Registro</string>

    <!--Transaction Layout-->
    <string name="eliminar">Eliminar</string>

    <!-- spinner options -->
    <string-array name="gastos_categoria_array">
        <item>Comestibles</item>
        <item>Restaurantes</item>
        <item>Transporte</item>
        <item>Salud</item>
        <item>Familia</item>
        <item>Regalos</item>
        <item>Personal</item>
        <item>Compras</item>
        <item>Otros</item>
    </string-array>

    <string-array name="meses_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="anios_array">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string-array name="ingresos_categoria_array">
        <item>Sueldo</item>
        <item>Ventas</item>
    </string-array>

    <!--Historial Layout-->
    <string name="historial_ahorro_acumulado">Ahorro Acumulado</string>
    <string name="historial_ingresos">Total de ingresos</string>
    <string name="historial_gastos">Total de ingresos</string>
    <string name="historial_ver_registro_gastos">Ver historial de gastos</string>
    <string name="historial_ver_registro_ingresos">Ver historial de ingresos</string>
    <string name="historial_cuentas">Cuentas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>