<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_usuario"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_usuario" />

        <item
            android:id="@+id/nav_ingresos"
            android:icon="@drawable/ic_baseline_ingreso_24"
            android:title="@string/menu_nuevo_ingreso" />

        <item
            android:id="@+id/nav_gastos"
            android:icon="@drawable/ic_baseline_gasto_24"
            android:title="@string/menu_nuevo_gasto" />

        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_baseline_transactions_24"
            android:title="@string/menu_historial" />
    </group>
</menu>