<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_usuario"
        android:name="com.carlos.ahorromatic.ui.usuario.UsuarioFragment"
        android:label="@string/menu_usuario"
        tools:layout="@layout/usuario_fragment" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.carlos.ahorromatic.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/historial_fragment" />

    <fragment
        android:id="@+id/nav_gastos"
        android:name="com.carlos.ahorromatic.ui.gastos.GastosFragment"
        android:label="@string/menu_gastos"
        tools:layout="@layout/gastos_fragment" />

    <fragment
        android:id="@+id/nav_ingresos"
        android:name="com.carlos.ahorromatic.ui.ingresos.IngresosFragment"
        android:label="@string/menu_ingresos"
        tools:layout="@layout/ingresos_fragment" />

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.carlos.ahorromatic.ui.inicioFragment"
        android:label="@string/nav_inicio"
        tools:layout="@layout/inicio_fragment" >
        <action
            android:id="@+id/action_nav_inicio_to_nav_gastos"
            app:destination="@id/nav_gastos" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_ingresos"
            app:destination="@id/nav_ingresos" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_historial"
            app:destination="@id/nav_historial" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_usuario"
            app:destination="@id/nav_usuario" />
    </fragment>
</navigation>